--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Alura Viagens</string>
+    <string name="lista_pacotes_tipo_pacote">Especiais</string>
+    <string name="lista_pacotes_pais">Brasil</string>
 </resources>
