--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="lista_pacotes_tipo_pacote">Especiais</string>
     <string name="lista_pacotes_pais">Brasil</string>
     <string name="lista_pacotes_img_banner_desc">Banner da aplicação</string>
+    <string name="item_lista_pacotes_img_desc">Imagem do local</string>
 </resources>
